parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> statement
Rule 2     statement -> statement_print FINISH statement
Rule 3     statement -> statement_register FINISH statement
Rule 4     statement -> statement_condition statement
Rule 5     statement -> statement_for statement
Rule 6     statement -> statement_while statement
Rule 7     statement -> empty
Rule 8     expression -> NAME
Rule 9     expression -> expression AND expression
Rule 10    expression -> expression OR expression
Rule 11    expression -> expression ADDITION expression
Rule 12    expression -> expression SUBTRACTION expression
Rule 13    expression -> expression MULTI expression
Rule 14    expression -> expression DIVISION expression
Rule 15    expression -> expression EXP expression
Rule 16    expression -> expression EQUALS expression
Rule 17    expression -> expression NOT_EQUALS expression
Rule 18    expression -> expression EQ_MORE expression
Rule 19    expression -> expression EQ_LESS expression
Rule 20    expression -> expression MORE expression
Rule 21    expression -> expression LESS expression
Rule 22    expression -> FNUMBER
Rule 23    expression -> INUMBER
Rule 24    expression -> STRING_VAL
Rule 25    expression -> bool_val
Rule 26    bool_val -> TRUE
Rule 27    bool_val -> FALSE
Rule 28    expression -> L_PAREN expression R_PAREN
Rule 29    expression -> SUBTRACTION expression
Rule 30    statement_print -> PRINT expression
Rule 31    statement_register -> declare_register
Rule 32    statement_register -> declare_assign_register
Rule 33    statement_register -> assign_register
Rule 34    declare_register -> type NAME
Rule 35    declare_assign_register -> type NAME ASSIGN expression
Rule 36    assign_register -> NAME ASSIGN expression
Rule 37    statement_condition -> if_condition elif_condition else_condition
Rule 38    if_condition -> IF L_PAREN expression R_PAREN L_KEY statement R_KEY
Rule 39    elif_condition -> ELIF L_PAREN expression R_PAREN L_KEY statement R_KEY elif_condition
Rule 40    elif_condition -> empty
Rule 41    else_condition -> ELSE L_KEY statement R_KEY
Rule 42    else_condition -> empty
Rule 43    statement_for -> FOR L_PAREN declare_assign_register FINISH expression FINISH assign_register R_PAREN L_KEY statement R_KEY
Rule 44    statement_while -> WHILE L_PAREN expression R_PAREN L_KEY statement R_KEY
Rule 45    statement_while -> DO L_KEY statement R_KEY WHILE L_PAREN expression R_PAREN FINISH
Rule 46    empty -> <empty>
Rule 47    type -> BOOL
Rule 48    type -> INTDEC
Rule 49    type -> FLOATDEC
Rule 50    type -> STRING

Terminals, with rules where they appear

ADDITION             : 11
AND                  : 9
ASSIGN               : 35 36
BOOL                 : 47
DIVISION             : 14
DO                   : 45
ELIF                 : 39
ELSE                 : 41
EQUALS               : 16
EQ_LESS              : 19
EQ_MORE              : 18
EXP                  : 15
FALSE                : 27
FINISH               : 2 3 43 43 45
FLOATDEC             : 49
FNUMBER              : 22
FOR                  : 43
IF                   : 38
INTDEC               : 48
INUMBER              : 23
LESS                 : 21
L_KEY                : 38 39 41 43 44 45
L_PAREN              : 28 38 39 43 44 45
MORE                 : 20
MULTI                : 13
NAME                 : 8 34 35 36
NOT_EQUALS           : 17
OR                   : 10
PRINT                : 30
R_KEY                : 38 39 41 43 44 45
R_PAREN              : 28 38 39 43 44 45
STRING               : 50
STRING_VAL           : 24
SUBTRACTION          : 12 29
TRUE                 : 26
WHILE                : 44 45
error                : 

Nonterminals, with rules where they appear

assign_register      : 33 43
bool_val             : 25
declare_assign_register : 32 43
declare_register     : 31
elif_condition       : 37 39
else_condition       : 37
empty                : 7 40 42
expression           : 9 9 10 10 11 11 12 12 13 13 14 14 15 15 16 16 17 17 18 18 19 19 20 20 21 21 28 29 30 35 36 38 39 43 44 45
if_condition         : 37
start                : 0
statement            : 1 2 3 4 5 6 38 39 41 43 44 45
statement_condition  : 4
statement_for        : 5
statement_print      : 2
statement_register   : 3
statement_while      : 6
type                 : 34 35

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . statement
    (2) statement -> . statement_print FINISH statement
    (3) statement -> . statement_register FINISH statement
    (4) statement -> . statement_condition statement
    (5) statement -> . statement_for statement
    (6) statement -> . statement_while statement
    (7) statement -> . empty
    (30) statement_print -> . PRINT expression
    (31) statement_register -> . declare_register
    (32) statement_register -> . declare_assign_register
    (33) statement_register -> . assign_register
    (37) statement_condition -> . if_condition elif_condition else_condition
    (43) statement_for -> . FOR L_PAREN declare_assign_register FINISH expression FINISH assign_register R_PAREN L_KEY statement R_KEY
    (44) statement_while -> . WHILE L_PAREN expression R_PAREN L_KEY statement R_KEY
    (45) statement_while -> . DO L_KEY statement R_KEY WHILE L_PAREN expression R_PAREN FINISH
    (46) empty -> .
    (34) declare_register -> . type NAME
    (35) declare_assign_register -> . type NAME ASSIGN expression
    (36) assign_register -> . NAME ASSIGN expression
    (38) if_condition -> . IF L_PAREN expression R_PAREN L_KEY statement R_KEY
    (47) type -> . BOOL
    (48) type -> . INTDEC
    (49) type -> . FLOATDEC
    (50) type -> . STRING

    PRINT           shift and go to state 9
    FOR             shift and go to state 14
    WHILE           shift and go to state 15
    DO              shift and go to state 16
    $end            reduce using rule 46 (empty -> .)
    NAME            shift and go to state 18
    IF              shift and go to state 19
    BOOL            shift and go to state 20
    INTDEC          shift and go to state 21
    FLOATDEC        shift and go to state 22
    STRING          shift and go to state 23

    start                          shift and go to state 1
    statement                      shift and go to state 2
    statement_print                shift and go to state 3
    statement_register             shift and go to state 4
    statement_condition            shift and go to state 5
    statement_for                  shift and go to state 6
    statement_while                shift and go to state 7
    empty                          shift and go to state 8
    declare_register               shift and go to state 10
    declare_assign_register        shift and go to state 11
    assign_register                shift and go to state 12
    if_condition                   shift and go to state 13
    type                           shift and go to state 17

state 1

    (0) S' -> start .



state 2

    (1) start -> statement .

    $end            reduce using rule 1 (start -> statement .)


state 3

    (2) statement -> statement_print . FINISH statement

    FINISH          shift and go to state 24


state 4

    (3) statement -> statement_register . FINISH statement

    FINISH          shift and go to state 25


state 5

    (4) statement -> statement_condition . statement
    (2) statement -> . statement_print FINISH statement
    (3) statement -> . statement_register FINISH statement
    (4) statement -> . statement_condition statement
    (5) statement -> . statement_for statement
    (6) statement -> . statement_while statement
    (7) statement -> . empty
    (30) statement_print -> . PRINT expression
    (31) statement_register -> . declare_register
    (32) statement_register -> . declare_assign_register
    (33) statement_register -> . assign_register
    (37) statement_condition -> . if_condition elif_condition else_condition
    (43) statement_for -> . FOR L_PAREN declare_assign_register FINISH expression FINISH assign_register R_PAREN L_KEY statement R_KEY
    (44) statement_while -> . WHILE L_PAREN expression R_PAREN L_KEY statement R_KEY
    (45) statement_while -> . DO L_KEY statement R_KEY WHILE L_PAREN expression R_PAREN FINISH
    (46) empty -> .
    (34) declare_register -> . type NAME
    (35) declare_assign_register -> . type NAME ASSIGN expression
    (36) assign_register -> . NAME ASSIGN expression
    (38) if_condition -> . IF L_PAREN expression R_PAREN L_KEY statement R_KEY
    (47) type -> . BOOL
    (48) type -> . INTDEC
    (49) type -> . FLOATDEC
    (50) type -> . STRING

    PRINT           shift and go to state 9
    FOR             shift and go to state 14
    WHILE           shift and go to state 15
    DO              shift and go to state 16
    $end            reduce using rule 46 (empty -> .)
    R_KEY           reduce using rule 46 (empty -> .)
    NAME            shift and go to state 18
    IF              shift and go to state 19
    BOOL            shift and go to state 20
    INTDEC          shift and go to state 21
    FLOATDEC        shift and go to state 22
    STRING          shift and go to state 23

    statement_condition            shift and go to state 5
    statement                      shift and go to state 26
    statement_print                shift and go to state 3
    statement_register             shift and go to state 4
    statement_for                  shift and go to state 6
    statement_while                shift and go to state 7
    empty                          shift and go to state 8
    declare_register               shift and go to state 10
    declare_assign_register        shift and go to state 11
    assign_register                shift and go to state 12
    if_condition                   shift and go to state 13
    type                           shift and go to state 17

state 6

    (5) statement -> statement_for . statement
    (2) statement -> . statement_print FINISH statement
    (3) statement -> . statement_register FINISH statement
    (4) statement -> . statement_condition statement
    (5) statement -> . statement_for statement
    (6) statement -> . statement_while statement
    (7) statement -> . empty
    (30) statement_print -> . PRINT expression
    (31) statement_register -> . declare_register
    (32) statement_register -> . declare_assign_register
    (33) statement_register -> . assign_register
    (37) statement_condition -> . if_condition elif_condition else_condition
    (43) statement_for -> . FOR L_PAREN declare_assign_register FINISH expression FINISH assign_register R_PAREN L_KEY statement R_KEY
    (44) statement_while -> . WHILE L_PAREN expression R_PAREN L_KEY statement R_KEY
    (45) statement_while -> . DO L_KEY statement R_KEY WHILE L_PAREN expression R_PAREN FINISH
    (46) empty -> .
    (34) declare_register -> . type NAME
    (35) declare_assign_register -> . type NAME ASSIGN expression
    (36) assign_register -> . NAME ASSIGN expression
    (38) if_condition -> . IF L_PAREN expression R_PAREN L_KEY statement R_KEY
    (47) type -> . BOOL
    (48) type -> . INTDEC
    (49) type -> . FLOATDEC
    (50) type -> . STRING

    PRINT           shift and go to state 9
    FOR             shift and go to state 14
    WHILE           shift and go to state 15
    DO              shift and go to state 16
    $end            reduce using rule 46 (empty -> .)
    R_KEY           reduce using rule 46 (empty -> .)
    NAME            shift and go to state 18
    IF              shift and go to state 19
    BOOL            shift and go to state 20
    INTDEC          shift and go to state 21
    FLOATDEC        shift and go to state 22
    STRING          shift and go to state 23

    statement_for                  shift and go to state 6
    statement                      shift and go to state 27
    statement_print                shift and go to state 3
    statement_register             shift and go to state 4
    statement_condition            shift and go to state 5
    statement_while                shift and go to state 7
    empty                          shift and go to state 8
    declare_register               shift and go to state 10
    declare_assign_register        shift and go to state 11
    assign_register                shift and go to state 12
    if_condition                   shift and go to state 13
    type                           shift and go to state 17

state 7

    (6) statement -> statement_while . statement
    (2) statement -> . statement_print FINISH statement
    (3) statement -> . statement_register FINISH statement
    (4) statement -> . statement_condition statement
    (5) statement -> . statement_for statement
    (6) statement -> . statement_while statement
    (7) statement -> . empty
    (30) statement_print -> . PRINT expression
    (31) statement_register -> . declare_register
    (32) statement_register -> . declare_assign_register
    (33) statement_register -> . assign_register
    (37) statement_condition -> . if_condition elif_condition else_condition
    (43) statement_for -> . FOR L_PAREN declare_assign_register FINISH expression FINISH assign_register R_PAREN L_KEY statement R_KEY
    (44) statement_while -> . WHILE L_PAREN expression R_PAREN L_KEY statement R_KEY
    (45) statement_while -> . DO L_KEY statement R_KEY WHILE L_PAREN expression R_PAREN FINISH
    (46) empty -> .
    (34) declare_register -> . type NAME
    (35) declare_assign_register -> . type NAME ASSIGN expression
    (36) assign_register -> . NAME ASSIGN expression
    (38) if_condition -> . IF L_PAREN expression R_PAREN L_KEY statement R_KEY
    (47) type -> . BOOL
    (48) type -> . INTDEC
    (49) type -> . FLOATDEC
    (50) type -> . STRING

    PRINT           shift and go to state 9
    FOR             shift and go to state 14
    WHILE           shift and go to state 15
    DO              shift and go to state 16
    $end            reduce using rule 46 (empty -> .)
    R_KEY           reduce using rule 46 (empty -> .)
    NAME            shift and go to state 18
    IF              shift and go to state 19
    BOOL            shift and go to state 20
    INTDEC          shift and go to state 21
    FLOATDEC        shift and go to state 22
    STRING          shift and go to state 23

    statement_while                shift and go to state 7
    statement                      shift and go to state 28
    statement_print                shift and go to state 3
    statement_register             shift and go to state 4
    statement_condition            shift and go to state 5
    statement_for                  shift and go to state 6
    empty                          shift and go to state 8
    declare_register               shift and go to state 10
    declare_assign_register        shift and go to state 11
    assign_register                shift and go to state 12
    if_condition                   shift and go to state 13
    type                           shift and go to state 17

state 8

    (7) statement -> empty .

    $end            reduce using rule 7 (statement -> empty .)
    R_KEY           reduce using rule 7 (statement -> empty .)


state 9

    (30) statement_print -> PRINT . expression
    (8) expression -> . NAME
    (9) expression -> . expression AND expression
    (10) expression -> . expression OR expression
    (11) expression -> . expression ADDITION expression
    (12) expression -> . expression SUBTRACTION expression
    (13) expression -> . expression MULTI expression
    (14) expression -> . expression DIVISION expression
    (15) expression -> . expression EXP expression
    (16) expression -> . expression EQUALS expression
    (17) expression -> . expression NOT_EQUALS expression
    (18) expression -> . expression EQ_MORE expression
    (19) expression -> . expression EQ_LESS expression
    (20) expression -> . expression MORE expression
    (21) expression -> . expression LESS expression
    (22) expression -> . FNUMBER
    (23) expression -> . INUMBER
    (24) expression -> . STRING_VAL
    (25) expression -> . bool_val
    (28) expression -> . L_PAREN expression R_PAREN
    (29) expression -> . SUBTRACTION expression
    (26) bool_val -> . TRUE
    (27) bool_val -> . FALSE

    NAME            shift and go to state 30
    FNUMBER         shift and go to state 32
    INUMBER         shift and go to state 33
    STRING_VAL      shift and go to state 34
    L_PAREN         shift and go to state 36
    SUBTRACTION     shift and go to state 31
    TRUE            shift and go to state 37
    FALSE           shift and go to state 38

    expression                     shift and go to state 29
    bool_val                       shift and go to state 35

state 10

    (31) statement_register -> declare_register .

    FINISH          reduce using rule 31 (statement_register -> declare_register .)


state 11

    (32) statement_register -> declare_assign_register .

    FINISH          reduce using rule 32 (statement_register -> declare_assign_register .)


state 12

    (33) statement_register -> assign_register .

    FINISH          reduce using rule 33 (statement_register -> assign_register .)


state 13

    (37) statement_condition -> if_condition . elif_condition else_condition
    (39) elif_condition -> . ELIF L_PAREN expression R_PAREN L_KEY statement R_KEY elif_condition
    (40) elif_condition -> . empty
    (46) empty -> .

    ELIF            shift and go to state 40
    ELSE            reduce using rule 46 (empty -> .)
    PRINT           reduce using rule 46 (empty -> .)
    FOR             reduce using rule 46 (empty -> .)
    WHILE           reduce using rule 46 (empty -> .)
    DO              reduce using rule 46 (empty -> .)
    NAME            reduce using rule 46 (empty -> .)
    IF              reduce using rule 46 (empty -> .)
    BOOL            reduce using rule 46 (empty -> .)
    INTDEC          reduce using rule 46 (empty -> .)
    FLOATDEC        reduce using rule 46 (empty -> .)
    STRING          reduce using rule 46 (empty -> .)
    $end            reduce using rule 46 (empty -> .)
    R_KEY           reduce using rule 46 (empty -> .)

    elif_condition                 shift and go to state 39
    empty                          shift and go to state 41

state 14

    (43) statement_for -> FOR . L_PAREN declare_assign_register FINISH expression FINISH assign_register R_PAREN L_KEY statement R_KEY

    L_PAREN         shift and go to state 42


state 15

    (44) statement_while -> WHILE . L_PAREN expression R_PAREN L_KEY statement R_KEY

    L_PAREN         shift and go to state 43


state 16

    (45) statement_while -> DO . L_KEY statement R_KEY WHILE L_PAREN expression R_PAREN FINISH

    L_KEY           shift and go to state 44


state 17

    (34) declare_register -> type . NAME
    (35) declare_assign_register -> type . NAME ASSIGN expression

    NAME            shift and go to state 45


state 18

    (36) assign_register -> NAME . ASSIGN expression

    ASSIGN          shift and go to state 46


state 19

    (38) if_condition -> IF . L_PAREN expression R_PAREN L_KEY statement R_KEY

    L_PAREN         shift and go to state 47


state 20

    (47) type -> BOOL .

    NAME            reduce using rule 47 (type -> BOOL .)


state 21

    (48) type -> INTDEC .

    NAME            reduce using rule 48 (type -> INTDEC .)


state 22

    (49) type -> FLOATDEC .

    NAME            reduce using rule 49 (type -> FLOATDEC .)


state 23

    (50) type -> STRING .

    NAME            reduce using rule 50 (type -> STRING .)


state 24

    (2) statement -> statement_print FINISH . statement
    (2) statement -> . statement_print FINISH statement
    (3) statement -> . statement_register FINISH statement
    (4) statement -> . statement_condition statement
    (5) statement -> . statement_for statement
    (6) statement -> . statement_while statement
    (7) statement -> . empty
    (30) statement_print -> . PRINT expression
    (31) statement_register -> . declare_register
    (32) statement_register -> . declare_assign_register
    (33) statement_register -> . assign_register
    (37) statement_condition -> . if_condition elif_condition else_condition
    (43) statement_for -> . FOR L_PAREN declare_assign_register FINISH expression FINISH assign_register R_PAREN L_KEY statement R_KEY
    (44) statement_while -> . WHILE L_PAREN expression R_PAREN L_KEY statement R_KEY
    (45) statement_while -> . DO L_KEY statement R_KEY WHILE L_PAREN expression R_PAREN FINISH
    (46) empty -> .
    (34) declare_register -> . type NAME
    (35) declare_assign_register -> . type NAME ASSIGN expression
    (36) assign_register -> . NAME ASSIGN expression
    (38) if_condition -> . IF L_PAREN expression R_PAREN L_KEY statement R_KEY
    (47) type -> . BOOL
    (48) type -> . INTDEC
    (49) type -> . FLOATDEC
    (50) type -> . STRING

    PRINT           shift and go to state 9
    FOR             shift and go to state 14
    WHILE           shift and go to state 15
    DO              shift and go to state 16
    $end            reduce using rule 46 (empty -> .)
    R_KEY           reduce using rule 46 (empty -> .)
    NAME            shift and go to state 18
    IF              shift and go to state 19
    BOOL            shift and go to state 20
    INTDEC          shift and go to state 21
    FLOATDEC        shift and go to state 22
    STRING          shift and go to state 23

    statement_print                shift and go to state 3
    statement                      shift and go to state 48
    statement_register             shift and go to state 4
    statement_condition            shift and go to state 5
    statement_for                  shift and go to state 6
    statement_while                shift and go to state 7
    empty                          shift and go to state 8
    declare_register               shift and go to state 10
    declare_assign_register        shift and go to state 11
    assign_register                shift and go to state 12
    if_condition                   shift and go to state 13
    type                           shift and go to state 17

state 25

    (3) statement -> statement_register FINISH . statement
    (2) statement -> . statement_print FINISH statement
    (3) statement -> . statement_register FINISH statement
    (4) statement -> . statement_condition statement
    (5) statement -> . statement_for statement
    (6) statement -> . statement_while statement
    (7) statement -> . empty
    (30) statement_print -> . PRINT expression
    (31) statement_register -> . declare_register
    (32) statement_register -> . declare_assign_register
    (33) statement_register -> . assign_register
    (37) statement_condition -> . if_condition elif_condition else_condition
    (43) statement_for -> . FOR L_PAREN declare_assign_register FINISH expression FINISH assign_register R_PAREN L_KEY statement R_KEY
    (44) statement_while -> . WHILE L_PAREN expression R_PAREN L_KEY statement R_KEY
    (45) statement_while -> . DO L_KEY statement R_KEY WHILE L_PAREN expression R_PAREN FINISH
    (46) empty -> .
    (34) declare_register -> . type NAME
    (35) declare_assign_register -> . type NAME ASSIGN expression
    (36) assign_register -> . NAME ASSIGN expression
    (38) if_condition -> . IF L_PAREN expression R_PAREN L_KEY statement R_KEY
    (47) type -> . BOOL
    (48) type -> . INTDEC
    (49) type -> . FLOATDEC
    (50) type -> . STRING

    PRINT           shift and go to state 9
    FOR             shift and go to state 14
    WHILE           shift and go to state 15
    DO              shift and go to state 16
    $end            reduce using rule 46 (empty -> .)
    R_KEY           reduce using rule 46 (empty -> .)
    NAME            shift and go to state 18
    IF              shift and go to state 19
    BOOL            shift and go to state 20
    INTDEC          shift and go to state 21
    FLOATDEC        shift and go to state 22
    STRING          shift and go to state 23

    statement_register             shift and go to state 4
    statement                      shift and go to state 49
    statement_print                shift and go to state 3
    statement_condition            shift and go to state 5
    statement_for                  shift and go to state 6
    statement_while                shift and go to state 7
    empty                          shift and go to state 8
    declare_register               shift and go to state 10
    declare_assign_register        shift and go to state 11
    assign_register                shift and go to state 12
    if_condition                   shift and go to state 13
    type                           shift and go to state 17

state 26

    (4) statement -> statement_condition statement .

    $end            reduce using rule 4 (statement -> statement_condition statement .)
    R_KEY           reduce using rule 4 (statement -> statement_condition statement .)


state 27

    (5) statement -> statement_for statement .

    $end            reduce using rule 5 (statement -> statement_for statement .)
    R_KEY           reduce using rule 5 (statement -> statement_for statement .)


state 28

    (6) statement -> statement_while statement .

    $end            reduce using rule 6 (statement -> statement_while statement .)
    R_KEY           reduce using rule 6 (statement -> statement_while statement .)


state 29

    (30) statement_print -> PRINT expression .
    (9) expression -> expression . AND expression
    (10) expression -> expression . OR expression
    (11) expression -> expression . ADDITION expression
    (12) expression -> expression . SUBTRACTION expression
    (13) expression -> expression . MULTI expression
    (14) expression -> expression . DIVISION expression
    (15) expression -> expression . EXP expression
    (16) expression -> expression . EQUALS expression
    (17) expression -> expression . NOT_EQUALS expression
    (18) expression -> expression . EQ_MORE expression
    (19) expression -> expression . EQ_LESS expression
    (20) expression -> expression . MORE expression
    (21) expression -> expression . LESS expression

    FINISH          reduce using rule 30 (statement_print -> PRINT expression .)
    AND             shift and go to state 50
    OR              shift and go to state 51
    ADDITION        shift and go to state 52
    SUBTRACTION     shift and go to state 53
    MULTI           shift and go to state 54
    DIVISION        shift and go to state 55
    EXP             shift and go to state 56
    EQUALS          shift and go to state 57
    NOT_EQUALS      shift and go to state 58
    EQ_MORE         shift and go to state 59
    EQ_LESS         shift and go to state 60
    MORE            shift and go to state 61
    LESS            shift and go to state 62


state 30

    (8) expression -> NAME .

    AND             reduce using rule 8 (expression -> NAME .)
    OR              reduce using rule 8 (expression -> NAME .)
    ADDITION        reduce using rule 8 (expression -> NAME .)
    SUBTRACTION     reduce using rule 8 (expression -> NAME .)
    MULTI           reduce using rule 8 (expression -> NAME .)
    DIVISION        reduce using rule 8 (expression -> NAME .)
    EXP             reduce using rule 8 (expression -> NAME .)
    EQUALS          reduce using rule 8 (expression -> NAME .)
    NOT_EQUALS      reduce using rule 8 (expression -> NAME .)
    EQ_MORE         reduce using rule 8 (expression -> NAME .)
    EQ_LESS         reduce using rule 8 (expression -> NAME .)
    MORE            reduce using rule 8 (expression -> NAME .)
    LESS            reduce using rule 8 (expression -> NAME .)
    FINISH          reduce using rule 8 (expression -> NAME .)
    R_PAREN         reduce using rule 8 (expression -> NAME .)


state 31

    (29) expression -> SUBTRACTION . expression
    (8) expression -> . NAME
    (9) expression -> . expression AND expression
    (10) expression -> . expression OR expression
    (11) expression -> . expression ADDITION expression
    (12) expression -> . expression SUBTRACTION expression
    (13) expression -> . expression MULTI expression
    (14) expression -> . expression DIVISION expression
    (15) expression -> . expression EXP expression
    (16) expression -> . expression EQUALS expression
    (17) expression -> . expression NOT_EQUALS expression
    (18) expression -> . expression EQ_MORE expression
    (19) expression -> . expression EQ_LESS expression
    (20) expression -> . expression MORE expression
    (21) expression -> . expression LESS expression
    (22) expression -> . FNUMBER
    (23) expression -> . INUMBER
    (24) expression -> . STRING_VAL
    (25) expression -> . bool_val
    (28) expression -> . L_PAREN expression R_PAREN
    (29) expression -> . SUBTRACTION expression
    (26) bool_val -> . TRUE
    (27) bool_val -> . FALSE

    NAME            shift and go to state 30
    FNUMBER         shift and go to state 32
    INUMBER         shift and go to state 33
    STRING_VAL      shift and go to state 34
    L_PAREN         shift and go to state 36
    SUBTRACTION     shift and go to state 31
    TRUE            shift and go to state 37
    FALSE           shift and go to state 38

    expression                     shift and go to state 63
    bool_val                       shift and go to state 35

state 32

    (22) expression -> FNUMBER .

    AND             reduce using rule 22 (expression -> FNUMBER .)
    OR              reduce using rule 22 (expression -> FNUMBER .)
    ADDITION        reduce using rule 22 (expression -> FNUMBER .)
    SUBTRACTION     reduce using rule 22 (expression -> FNUMBER .)
    MULTI           reduce using rule 22 (expression -> FNUMBER .)
    DIVISION        reduce using rule 22 (expression -> FNUMBER .)
    EXP             reduce using rule 22 (expression -> FNUMBER .)
    EQUALS          reduce using rule 22 (expression -> FNUMBER .)
    NOT_EQUALS      reduce using rule 22 (expression -> FNUMBER .)
    EQ_MORE         reduce using rule 22 (expression -> FNUMBER .)
    EQ_LESS         reduce using rule 22 (expression -> FNUMBER .)
    MORE            reduce using rule 22 (expression -> FNUMBER .)
    LESS            reduce using rule 22 (expression -> FNUMBER .)
    FINISH          reduce using rule 22 (expression -> FNUMBER .)
    R_PAREN         reduce using rule 22 (expression -> FNUMBER .)


state 33

    (23) expression -> INUMBER .

    AND             reduce using rule 23 (expression -> INUMBER .)
    OR              reduce using rule 23 (expression -> INUMBER .)
    ADDITION        reduce using rule 23 (expression -> INUMBER .)
    SUBTRACTION     reduce using rule 23 (expression -> INUMBER .)
    MULTI           reduce using rule 23 (expression -> INUMBER .)
    DIVISION        reduce using rule 23 (expression -> INUMBER .)
    EXP             reduce using rule 23 (expression -> INUMBER .)
    EQUALS          reduce using rule 23 (expression -> INUMBER .)
    NOT_EQUALS      reduce using rule 23 (expression -> INUMBER .)
    EQ_MORE         reduce using rule 23 (expression -> INUMBER .)
    EQ_LESS         reduce using rule 23 (expression -> INUMBER .)
    MORE            reduce using rule 23 (expression -> INUMBER .)
    LESS            reduce using rule 23 (expression -> INUMBER .)
    FINISH          reduce using rule 23 (expression -> INUMBER .)
    R_PAREN         reduce using rule 23 (expression -> INUMBER .)


state 34

    (24) expression -> STRING_VAL .

    AND             reduce using rule 24 (expression -> STRING_VAL .)
    OR              reduce using rule 24 (expression -> STRING_VAL .)
    ADDITION        reduce using rule 24 (expression -> STRING_VAL .)
    SUBTRACTION     reduce using rule 24 (expression -> STRING_VAL .)
    MULTI           reduce using rule 24 (expression -> STRING_VAL .)
    DIVISION        reduce using rule 24 (expression -> STRING_VAL .)
    EXP             reduce using rule 24 (expression -> STRING_VAL .)
    EQUALS          reduce using rule 24 (expression -> STRING_VAL .)
    NOT_EQUALS      reduce using rule 24 (expression -> STRING_VAL .)
    EQ_MORE         reduce using rule 24 (expression -> STRING_VAL .)
    EQ_LESS         reduce using rule 24 (expression -> STRING_VAL .)
    MORE            reduce using rule 24 (expression -> STRING_VAL .)
    LESS            reduce using rule 24 (expression -> STRING_VAL .)
    FINISH          reduce using rule 24 (expression -> STRING_VAL .)
    R_PAREN         reduce using rule 24 (expression -> STRING_VAL .)


state 35

    (25) expression -> bool_val .

    AND             reduce using rule 25 (expression -> bool_val .)
    OR              reduce using rule 25 (expression -> bool_val .)
    ADDITION        reduce using rule 25 (expression -> bool_val .)
    SUBTRACTION     reduce using rule 25 (expression -> bool_val .)
    MULTI           reduce using rule 25 (expression -> bool_val .)
    DIVISION        reduce using rule 25 (expression -> bool_val .)
    EXP             reduce using rule 25 (expression -> bool_val .)
    EQUALS          reduce using rule 25 (expression -> bool_val .)
    NOT_EQUALS      reduce using rule 25 (expression -> bool_val .)
    EQ_MORE         reduce using rule 25 (expression -> bool_val .)
    EQ_LESS         reduce using rule 25 (expression -> bool_val .)
    MORE            reduce using rule 25 (expression -> bool_val .)
    LESS            reduce using rule 25 (expression -> bool_val .)
    FINISH          reduce using rule 25 (expression -> bool_val .)
    R_PAREN         reduce using rule 25 (expression -> bool_val .)


state 36

    (28) expression -> L_PAREN . expression R_PAREN
    (8) expression -> . NAME
    (9) expression -> . expression AND expression
    (10) expression -> . expression OR expression
    (11) expression -> . expression ADDITION expression
    (12) expression -> . expression SUBTRACTION expression
    (13) expression -> . expression MULTI expression
    (14) expression -> . expression DIVISION expression
    (15) expression -> . expression EXP expression
    (16) expression -> . expression EQUALS expression
    (17) expression -> . expression NOT_EQUALS expression
    (18) expression -> . expression EQ_MORE expression
    (19) expression -> . expression EQ_LESS expression
    (20) expression -> . expression MORE expression
    (21) expression -> . expression LESS expression
    (22) expression -> . FNUMBER
    (23) expression -> . INUMBER
    (24) expression -> . STRING_VAL
    (25) expression -> . bool_val
    (28) expression -> . L_PAREN expression R_PAREN
    (29) expression -> . SUBTRACTION expression
    (26) bool_val -> . TRUE
    (27) bool_val -> . FALSE

    NAME            shift and go to state 30
    FNUMBER         shift and go to state 32
    INUMBER         shift and go to state 33
    STRING_VAL      shift and go to state 34
    L_PAREN         shift and go to state 36
    SUBTRACTION     shift and go to state 31
    TRUE            shift and go to state 37
    FALSE           shift and go to state 38

    expression                     shift and go to state 64
    bool_val                       shift and go to state 35

state 37

    (26) bool_val -> TRUE .

    AND             reduce using rule 26 (bool_val -> TRUE .)
    OR              reduce using rule 26 (bool_val -> TRUE .)
    ADDITION        reduce using rule 26 (bool_val -> TRUE .)
    SUBTRACTION     reduce using rule 26 (bool_val -> TRUE .)
    MULTI           reduce using rule 26 (bool_val -> TRUE .)
    DIVISION        reduce using rule 26 (bool_val -> TRUE .)
    EXP             reduce using rule 26 (bool_val -> TRUE .)
    EQUALS          reduce using rule 26 (bool_val -> TRUE .)
    NOT_EQUALS      reduce using rule 26 (bool_val -> TRUE .)
    EQ_MORE         reduce using rule 26 (bool_val -> TRUE .)
    EQ_LESS         reduce using rule 26 (bool_val -> TRUE .)
    MORE            reduce using rule 26 (bool_val -> TRUE .)
    LESS            reduce using rule 26 (bool_val -> TRUE .)
    FINISH          reduce using rule 26 (bool_val -> TRUE .)
    R_PAREN         reduce using rule 26 (bool_val -> TRUE .)


state 38

    (27) bool_val -> FALSE .

    AND             reduce using rule 27 (bool_val -> FALSE .)
    OR              reduce using rule 27 (bool_val -> FALSE .)
    ADDITION        reduce using rule 27 (bool_val -> FALSE .)
    SUBTRACTION     reduce using rule 27 (bool_val -> FALSE .)
    MULTI           reduce using rule 27 (bool_val -> FALSE .)
    DIVISION        reduce using rule 27 (bool_val -> FALSE .)
    EXP             reduce using rule 27 (bool_val -> FALSE .)
    EQUALS          reduce using rule 27 (bool_val -> FALSE .)
    NOT_EQUALS      reduce using rule 27 (bool_val -> FALSE .)
    EQ_MORE         reduce using rule 27 (bool_val -> FALSE .)
    EQ_LESS         reduce using rule 27 (bool_val -> FALSE .)
    MORE            reduce using rule 27 (bool_val -> FALSE .)
    LESS            reduce using rule 27 (bool_val -> FALSE .)
    FINISH          reduce using rule 27 (bool_val -> FALSE .)
    R_PAREN         reduce using rule 27 (bool_val -> FALSE .)


state 39

    (37) statement_condition -> if_condition elif_condition . else_condition
    (41) else_condition -> . ELSE L_KEY statement R_KEY
    (42) else_condition -> . empty
    (46) empty -> .

    ELSE            shift and go to state 66
    PRINT           reduce using rule 46 (empty -> .)
    FOR             reduce using rule 46 (empty -> .)
    WHILE           reduce using rule 46 (empty -> .)
    DO              reduce using rule 46 (empty -> .)
    NAME            reduce using rule 46 (empty -> .)
    IF              reduce using rule 46 (empty -> .)
    BOOL            reduce using rule 46 (empty -> .)
    INTDEC          reduce using rule 46 (empty -> .)
    FLOATDEC        reduce using rule 46 (empty -> .)
    STRING          reduce using rule 46 (empty -> .)
    $end            reduce using rule 46 (empty -> .)
    R_KEY           reduce using rule 46 (empty -> .)

    else_condition                 shift and go to state 65
    empty                          shift and go to state 67

state 40
